# obs-audio-plugin

./: CMakeLists.txt  README.md  buildspec.json
scripts/: sign-installer.ps1
src/: audio-recorder-dock.cpp  audio-recorder-dock.h  audio-recorder.cpp  audio-recorder.h  plugin-main.cpp
